--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ce site est juste pour presenter mes performences">
+    <meta name="description" content="Salut je suis Bleu Serge Alain, j’aimerais obtenir un emploi où mon expérience en élaboration de programmes, mon habileté à prendre des décisions innovatrices et mes aptitudes me permettraient d’accroître la clientèle de l’entreprise et d’augmenter ses revenus et de me perfectionner encore plus.">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="theme-color" content="#2c3e50" />
     <meta http-equiv="content-language" content="fr" />
     <meta name="language" content="fr" />
-    <meta name="copyright" content="Bleu Serge Alain" />
+    <meta name="copyright" content="/maniboss.netlify.app" />
     <title>Portfolio de Serge Alain</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="icomoon/style.css">
@@ -71,7 +71,7 @@
                 <div class="column right">
                     <div class="text">Je suis Serge Alain et je suis  <span class="typing-2"></span></div>
                     <p>Je suis Développeur, monteur de vidéo, et je fais des web-vidéos  pour mettre sur les réseaux sociaux je suis très amoureux de l’informatique donc j’apprendre pratiquement les langages de programmation, j’arrangeais le son de mes amis rappeurs depuis 2017 donc cela fait que je maîtrise un peu le logiciel FL STUDIO et CUBASE, j’ai appris la COLLECTION ADOBE pour mes propres besoins personnelle ,  je réalisais mes propres clips vidéo et audio. Je n’ai jamais fait de formation de tout ça. J’ai juste appris grâce à Internet.</p>
-                    <a href="#">Télécharger mon CV</a>
+                    <a href="mon-cv.pdf">Télécharger mon CV</a>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Mes compétences créatives et mes expériences.</div>
-                    <p>Je suis Développeur, monteur de vidéo, et je fais des web-vidéos  pour mettre sur les réseaux sociaux je suis très amoureux de l’informatique donc j’apprendre pratiquement les langages de programmation, j’arrangeais le son de mes amis rappeurs depuis 2017 donc cela fait que je maîtrise un peu le logiciel FL STUDIO et CUBASE, j’ai appris la COLLECTION ADOBE pour mes propres besoins personnelle ,  je réalisais mes propres clips vidéo et audio. Je n’ai jamais fait de formation de tout ça. J’ai juste appris grâce à Internet.</p>
+                    <p>J’aimerais obtenir un emploi où mon expérience en élaboration de programmes, mon habileté à prendre des décisions innovatrices et mes aptitudes me permettraient d’accroître la clientèle de l’entreprise et d’augmenter ses revenus et de me perfectionner encore plus.</p>
                     <a href="m.me/LaPageDeManiBoss" target="_bank">Envoyer un message</a>
                 </div>
                 <div class="column right">
@@ -198,6 +198,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Entrez en contact avec moi</div>
+                    
                     <div class="icons">
                         <div class="row">
                             <i class="icon-user"></i>
