changer le lien qui vers ma page messenger

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="column left">
                     <div class="text">Mes compétences créatives et mes expériences.</div>
                     <p>J’aimerais obtenir un emploi où mon expérience en élaboration de programmes, mon habileté à prendre des décisions innovatrices et mes aptitudes me permettraient d’accroître la clientèle de l’entreprise et d’augmenter ses revenus et de me perfectionner encore plus.</p>
-                    <a href="m.me/LaPageDeManiBoss" target="_bank">Envoyer un message</a>
+                    <a href="https://m.me/LaPageDeManiBoss" target="_bank">Envoyer un message</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
