changer le lien icon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="jquery.waypoints.min.js"></script>
     <script src="owl.carousel.min.js"></script>
     <link rel="stylesheet" href="owl.carousel.min.css"/>
+    <link rel="shortcut icon" href="/images/profile-1.jpeg" type="image/x-icon">
 
 </head>
 <body>
